fixed issue where percentages were not showing on first run and the font, font size, and styling of the chart and overall page

--- a/style.css
+++ b/style.css
@@ -1,24 +1,47 @@
 body {
   width: 1200px;
   margin: 20px auto;
+  font-family: 'Monoton', cursive;
 }
 
 h1 {
-  font-size: 100px;
+  font-size: 80px;
   text-align: center;
 }
 
 ul {
-  margin: 10px auto;
+  margin: 40px auto;
   text-align: center;
 }
 
 li {
+  transition: all 300ms ease;
   display: inline-block;
-  outline: 2px solid black;
+  /*outline: .5px solid black;*/
   width: 300px;
   height: 300px;
-  margin: 15px;
+  margin: 40px;
+  box-shadow: 0px 0px 3px 3px grey;
+}
+
+li:hover {
+  box-shadow:
+    0px 0px 5px cyan,
+    0px 0px 5px cyan,
+    0px 0px 5px cyan;
+  -webkit-transform: translateX(2px);
+  transform: translateX(2px);
+}
+
+#image_box {
+  /*outline: 1px solid black;*/
+  box-shadow: 0px 1px 6px 3px grey;
+}
+
+#fade_hr {
+	height: 10px;
+	border: 0;
+	box-shadow: 0 10px 10px -10px #8c8b8b inset;
 }
 
 img {
